[tool.poetry]
name = "vtuber-demo"
version = "0.1.0"
description = ""
authors = ["Jon Gaul <jgaul3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
sounddevice = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
